--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "formik": "^2.2.9",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "react-select": "^5.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.21.0",
