--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
