--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@matejmazur/react-katex": "^3.1.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
     "@reduxjs/toolkit": "^1.8.3",
