--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@matejmazur/react-katex": "^3.1.3",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.1.1",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@prisma/client": "^4.2.0",
+    "@trpc/client": "^9.27.0",
+    "@trpc/next": "^9.27.0",
+    "@trpc/react": "^9.27.0",
+    "@trpc/server": "^9.27.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.2",
+    "react-query": "^3.39.2",
     "react-select": "^5.4.0",
-    "yup": "^0.32.11"
+    "superjson": "^1.9.1",
+    "yup": "^0.32.11",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "eslint": "8.21.0",
