--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "^9.27.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
