--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "react-select": "^5.4.0",
