--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "prisma": "^4.1.1"
