--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "push": "npx prisma db push && npx prisma generate"
   },
   "dependencies": {
     "@matejmazur/react-katex": "^3.1.3",
