--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "push": "npx prisma db push && npx prisma generate"
+    "db_push": "npx prisma db push && npx prisma generate",
+    "git": "git add -A && git commit -m 'update' && git push"
   },
   "dependencies": {
     "@matejmazur/react-katex": "^3.1.3",
