--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "next": "12.2.3",
